<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signin.SignInActivity">

    <LinearLayout
        android:id="@+id/login_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_crab" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:padding="10dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_in"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_toStartOf="@+id/text_view_forgot_password"
                android:text="@string/did_you"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/forgot_password"
                android:textColor="@color/custom_blue" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_linearlayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/button_sign_up"
            android:text="@string/do_you_have_an_account"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>