<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_to_login"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_crab" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:hint="@string/user_name"
            android:padding="10dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:padding="10dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>