<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainsreen.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/header_background"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/thesis_crab_indoor_farming"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="50dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/custom_gray"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ph"
                    android:textColor="@color/custom_dark_blue"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_ph"
                    android:contentDescription="@string/ph" />

                <TextView
                    android:id="@+id/ph_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sample_ph_value"
                    android:textColor="@color/custom_dark_blue"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/custom_gray"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/custom_dark_blue"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_temperature"/>

                <TextView
                    android:id="@+id/temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sample_temperature_value"
                    android:textColor="@color/custom_dark_blue"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_gravity="center_horizontal"
        app:strokeColor="@color/custom_gray"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/bad_condition"
            android:textColor="@color/custom_red"/>

    </com.google.android.material.card.MaterialCardView>

    <Switch
        android:id="@+id/switch_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:showText="true"
        android:textOn="@string/auto"
        android:textOff="@string/off"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pumper_1"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_pumper1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/on"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pumper_2"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_pumper2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/on"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>